--- a/index.html
+++ b/index.html
@@ -40,40 +40,172 @@
       };
     </script>
   </head>
-  <body class="bg-background flex text-white">
-    <header class="bg-second flex flex-col items-center h-[874px] w-[120px]">
-      <div class="bg-sky container">
-        <h1 class="text-white text-6xl font-bold p-6 text-center barlow">CC</h1>
-      </div>
-      <div class="w-fit flex flex-col items-center justify-between mt-8 h-full">
-        <a href="https://www.instagram.com/">
-          <img
-            src="./assets/instagram.png"
-            alt="instagram logo"
-            class="w-fit"
-          />
-        </a>
-        <div class="flex flex-col items-center justify-center">
-          <img src="./assets/correo@gmail.com.svg" alt="email" class="mb-5" />
-          <img src="./assets/email-icon.png" alt="email-icon" class="mb-3" />
+  <body class="bg-background text-white">
+    <section class="flex">
+      <header class="bg-second flex flex-col items-center h-[874px] w-[120px]">
+        <div class="bg-sky container">
+          <h1 class="text-white text-6xl font-bold p-6 text-center barlow">
+            CC
+          </h1>
         </div>
-      </div>
-    </header>
-    <nav
-      class="flex justify-around items-center p-3 w-screen text-2xl font-light h-[100px] text-center"
-    >
+        <div
+          class="w-fit flex flex-col items-center justify-between mt-8 h-full"
+        >
+          <a href="https://www.instagram.com/">
+            <img
+              src="./assets/instagram.png"
+              alt="instagram logo"
+              class="w-fit"
+            />
+          </a>
+          <div class="flex flex-col items-center justify-center">
+            <img src="./assets/correo@gmail.com.svg" alt="email" class="mb-5" />
+            <img src="./assets/email-icon.png" alt="email-icon" class="mb-3" />
+          </div>
+        </div>
+      </header>
+      <nav
+        class="flex justify-around items-center p-3 w-screen text-2xl font-light h-[100px] text-center"
+      >
+        <div>
+          <p class="bg-second rounded-xl p-3 poppins">Condo Care</p>
+        </div>
+        <div class="flex justify-between gap-8">
+          <p>Home</p>
+          <p>Acerca de</p>
+          <p>Contacto</p>
+          <span class="flex">
+            <img src="./assets/Phone.png" alt="phone-icon" />
+            <p>+52 552364 2588</p>
+          </span>
+        </div>
+      </nav>
+    </section>
+    <section class="flex bg-second">
+      <img src="./assets//Group 1.png" alt="" />
       <div>
-        <p class="bg-second rounded-xl p-3 poppins">Condo Care</p>
+        <h3 class="font-bold text-4xl">Acerca de nosotros</h3>
+        <p>
+          CondoCare es una empresa líder en el campo de la administración y
+          mantenimiento de condominios y departamentos, comprometida con la
+          excelencia en el cuidado y gestión de propiedades. Nuestra misión es
+          proporcionar a los propietarios de condominios la tranquilidad y la
+          certeza de que sus inversiones están en las mejores manos,
+          garantizando un entorno seguro, ordenado y eficiente para todos los
+          residentes. Nuestros servicios integrales abarcan una amplia gama de
+          aspectos para asegurar que su propiedad esté siempre en condiciones
+          óptimas, lo que incluye:
+        </p>
+        <ul>
+          <li>Comunicacion transparente</li>
+          <li>Gestion Financiera</li>
+          <li>Mantenimiento preventivo</li>
+          <li>Seguridad</li>
+        </ul>
       </div>
-      <div class="flex justify-between gap-8">
-        <p>Home</p>
-        <p>Acerca de</p>
-        <p>Contacto</p>
-        <span class="flex">
-          <img src="./assets/Phone.png" alt="phone-icon" />
-          <p>+52 552364 2588</p>
+    </section>
+
+    <section class="flex flex-col bg-second justify-center items-center gap-10">
+      <h3>Nuestros servicios</h3>
+      <div class="flex gap-5">
+        <p>Condominio</p>
+        <p>Departamento</p>
+      </div>
+      <div class="bg-background flex rounded-xl">
+        <img src="./assets/Condominio.png" alt="" />
+        <span>
+          <h4>Administración</h4>
+          <p class="flex-wrap">
+            Mantener en perfecto estado las áreas comunes del condominio y
+            vigilar que el reglamento de condóminos se cumpla al pie de la letra
+          </p>
         </span>
       </div>
-    </nav>
+      <h3>Con 3 divisiones fundamentales</h3>
+      <div class="bg-background flex rounded-xl">
+        <span>
+          <h4>Administrador</h4>
+          <p>
+            El responsable de todo lo que pase en el condominio, de estar en
+            constante comunicación con los condóminos sobre los eventos
+            relevantes de las torres en cuestión de mantenimiento y de la
+            administración financiera y contable de las cuotas de mantenimiento.
+          </p>
+        </span>
+        <img
+          src="./assets/estudiante-afroamericano-ocupado-hace-investigacion-habla-companero-grupo-telefono-celular-tiene-documentos 2.png"
+          alt=""
+        />
+      </div>
+      <div class="bg-background flex rounded-xl">
+        <img src="./assets/Dots2.png" alt="" />
+        <span>
+          <h4>Encargado de mantenimiento</h4>
+          <p>
+            Limpieza de torres , albercas ,mantenimiento de jardines y el
+            correcto funcionamiento de los hidráulicos de agua potable y luz,
+            son una de las principales funciones del encargado, asi como la
+            recolección de basura , albañilería y pintado del condominio
+          </p>
+        </span>
+        <img src="./assets/Dots2.png" alt="" />
+      </div>
+      <div class="bg-background flex rounded-xl">
+        <img
+          src="./assets/hombre-negocios-vista-lateral-calcular-numeros-finanzas 2.png"
+          alt=""
+        />
+        <span>
+          <h4>Finanzas</h4>
+          <p>
+            Llevar la contabilidad de las cuotas de mantenimiento, es decir un
+            registro de los ingresos y egresos, pago de nómina, pago de
+            impuestos, tramite ante las autoridades correspondientes,
+            elaboración de estados financieros y reportes trimestrales al
+            Administrador General, al Comité de Vigilancia y a los Condóminos.
+          </p>
+        </span>
+      </div>
+    </section>
+    <section class="bg-background">
+      <div class="flex justify-between">
+        <h1>Contacto</h1>
+        <div class="flex gap-10">
+          <span class="flex gap-2">
+            <img src="./assets/Phone-blue.png" alt="" />
+            <p>+525587985211</p>
+          </span>
+          <span class="flex">
+            <img src="./assets/Email-blue.png" alt="" />
+            <p>correo@gmail.com</p>
+          </span>
+        </div>
+      </div>
+      <article class="flex flex-col w-96">
+        <div class="flex gap-10">
+          <input
+            type="text"
+            placeholder="Nombre"
+            class="bg-second p-3 rounded-lg focus:border-none"
+          />
+          <input
+            type="email"
+            placeholder="Email"
+            class="bg-second p-3 rounded-lg focus:border-none"
+          />
+        </div>
+        <input
+          type="text"
+          placeholder="Asunto"
+          class="bg-second p-3 rounded-lg focus:border-none w-full"
+        />
+        <span class="my-5">
+          <textarea
+            placeholder="Mensaje"
+            class="bg-second p-3 rounded-lg w-full focus:border-none"
+          ></textarea>
+        </span>
+      </article>
+    </section>
   </body>
 </html>
