--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Condo-Care</title>
+    <link rel="icon" href="./assets/Codnocare logo.png" type="image/x-icon" />
 
     <!-- Primero las hojas de estilo -->
     <link
@@ -64,9 +65,9 @@
           </div>
         </div>
       </header>
-      <div class="flex flex-col items-end">
+      <div class="flex flex-col items-center w-full">
         <nav
-          class="flex justify-around items-center p-3 w-screen text-2xl font-light h-[100px] text-center"
+          class="flex justify-around items-center p-3 w-[100%] text-2xl font-light h-[100px] text-center"
         >
           <div>
             <p class="bg-second rounded-xl p-3 poppins">Condo Care</p>
@@ -81,13 +82,13 @@
             </span>
           </div>
         </nav>
-        <div class="flex items-center justify-start">
-          <span class="text-4xl font-bold text-start">
-            <h2 class="m-0">Especialistas en Condominios y Departamentos</h2>
+        <div class="flex items-center justify-end w-full relative">
+          <div class="text-[48px] font-bold text-start absolute left-[50px]">
+            <h2 class="">Especialistas en Condominios y Departamentos</h2>
             <p class="text-3xl font-light m-0">
               Tu tranquilidad nuestra prioridad
             </p>
-          </span>
+          </div>
           <span>
             <img src="./assets/image 5.png" alt="" class="" />
           </span>
@@ -126,8 +127,15 @@
     >
       <h3 class="text-4xl font-semibold">Nuestros servicios</h3>
       <div class="flex gap-20 text-3xl">
-        <button onclick="mostrarServicio('condominio')">Condominio</button>
-        <button onclick="mostrarServicio('departamento')">Departamento</button>
+        <button onclick="mostrarServicio('condominio')" class="hover:underline">
+          Condominio
+        </button>
+        <button
+          onclick="mostrarServicio('departamento')"
+          class="hover:underline"
+        >
+          Departamento
+        </button>
       </div>
     </section>
 
@@ -176,7 +184,9 @@
           ></textarea>
         </span>
       </article>
-      <button class="bg-sky p-3 font-semibold poppins rounded-lg w-56">
+      <button
+        class="bg-sky p-3 font-semibold poppins rounded-lg w-56 hover:bg-blue-800"
+      >
         Enviar
       </button>
     </section>
