--- a/index.html
+++ b/index.html
@@ -73,9 +73,9 @@
             <p class="bg-second rounded-xl p-3 poppins">Condo Care</p>
           </div>
           <div class="flex justify-between gap-8">
-            <p>Home</p>
-            <p>Acerca de</p>
-            <p>Contacto</p>
+            <a href="#home">Home</a>
+            <a href="#acerca-de">Acerca de</a>
+            <a href="#contacto">Contacto</a>
             <span class="flex">
               <img src="./assets/Phone.png" alt="phone-icon" />
               <p>+52 552364 2588</p>
@@ -100,7 +100,7 @@
       <div class="w-[40rem]">
         <img src="./assets//Group 1.png" alt="" class="w-full" />
       </div>
-      <div class="w-2/3 flex flex-col gap-10">
+      <div class="w-2/3 flex flex-col gap-10" id="acerca-de">
         <h3 class="font-bold text-4xl">Acerca de nosotros</h3>
         <p class="text-3xl font-light">
           CondoCare es una empresa líder en el campo de la administración y
@@ -141,7 +141,7 @@
 
     <section id="services"></section>
 
-    <section class="p-5 mt-8">
+    <section class="p-5 mt-8" id="contacto">
       <div class="flex justify-between">
         <h1
           class="text-5xl font-bold underline underline-offset-8 underline-sky"
