add: change email info and phone data

--- a/index.html
+++ b/index.html
@@ -60,7 +60,11 @@
             />
           </a>
           <div class="flex flex-col items-center justify-center">
-            <img src="./assets/correo@gmail.com.svg" alt="email" class="mb-5" />
+            <img
+              src="./assets/condoocare@outlook.com.svg"
+              alt="email"
+              class="mb-5"
+            />
             <img src="./assets/email-icon.png" alt="email-icon" class="mb-3" />
           </div>
         </div>
@@ -78,7 +82,7 @@
             <a href="#contacto">Contacto</a>
             <span class="flex">
               <img src="./assets/Phone.png" alt="phone-icon" />
-              <p>+52 552364 2588</p>
+              <p>+52 5529661213</p>
             </span>
           </div>
         </nav>
@@ -151,11 +155,11 @@
         <div class="flex gap-10">
           <span class="flex gap-2 items-center">
             <img src="./assets/Phone-blue.png" alt="" class="h-fit" />
-            <p class="text-center">+525587985211</p>
+            <p class="text-center">+52 55 2966 1213</p>
           </span>
           <span class="flex gap-2 items-center">
             <img src="./assets/Email-blue.png" alt="" class="h-fit" />
-            <p class="text-center">correo@gmail.com</p>
+            <p class="text-center">condoocare@outlook.com</p>
           </span>
         </div>
       </div>
