--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Condo-Care</title>
     <link rel="icon" href="./assets/Codnocare logo.png" type="image/x-icon" />
-
+    <script src="index.js"></script>
     <!-- Primero las hojas de estilo -->
     <link
       href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css"
@@ -25,7 +25,7 @@
 
     <link rel="stylesheet" href="./style.css" />
     <!-- Luego los scripts -->
-    <script src="index.js"></script>
+
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
       tailwind.config = {
@@ -77,9 +77,9 @@
             <p class="bg-second rounded-xl p-3 poppins">Condo Care</p>
           </div>
           <div class="flex justify-between gap-8">
-            <a href="#home">Home</a>
-            <a href="#acerca-de">Acerca de</a>
-            <a href="#contacto">Contacto</a>
+            <a href="#home" class="hover:underline">Home</a>
+            <a href="#acerca-de" class="hover:underline">Acerca de</a>
+            <a href="#contacto" class="hover:underline">Contacto</a>
             <span class="flex">
               <img src="./assets/Phone.png" alt="phone-icon" />
               <p>+52 5529661213</p>
@@ -125,7 +125,9 @@
         </ul>
       </div>
     </section>
-
+    <span class="flex justify-center items-center">
+      <hr class="absolute w-96 border-t border-slate-300 mt-8" />
+    </span>
     <section
       class="bg-second flex flex-col justify-center items-center py-16 gap-10"
     >
@@ -163,39 +165,90 @@
           </span>
         </div>
       </div>
-      <article class="flex flex-col gap-8 mt-8">
-        <div class="flex gap-10 w-full">
+      <form id="miFormulario">
+        <article class="flex flex-col gap-8 mt-8">
+          <div class="flex gap-10 w-full">
+            <input
+              type="text"
+              id="name"
+              placeholder="Nombre"
+              class="bg-second p-3 rounded-lg focus:border-none w-1/2"
+            />
+            <input
+              type="number"
+              id="number"
+              placeholder="Numero de telefono"
+              class="bg-second p-3 rounded-lg focus:border-none w-1/2"
+            />
+          </div>
           <input
             type="text"
-            placeholder="Nombre"
-            class="bg-second p-3 rounded-lg focus:border-none w-1/2"
+            id="about"
+            placeholder="Asunto"
+            class="bg-second p-3 rounded-lg focus:border-none w-full"
           />
-          <input
-            type="email"
-            placeholder="Email"
-            class="bg-second p-3 rounded-lg focus:border-none w-1/2"
-          />
-        </div>
-        <input
-          type="text"
-          placeholder="Asunto"
-          class="bg-second p-3 rounded-lg focus:border-none w-full"
-        />
-        <span class="my-5">
-          <textarea
-            placeholder="Mensaje"
-            class="bg-second p-3 rounded-lg w-full focus:border-none"
-          ></textarea>
-        </span>
-      </article>
-      <button
-        class="bg-sky p-3 font-semibold poppins rounded-lg w-56 hover:bg-blue-800"
-      >
-        Enviar
-      </button>
+          <span class="my-5">
+            <textarea
+              id="message"
+              placeholder="Mensaje"
+              class="bg-second p-3 rounded-lg w-full focus:border-none"
+            ></textarea>
+          </span>
+        </article>
+        <button
+          type="button"
+          id="sendButton"
+          class="bg-sky p-3 font-semibold poppins rounded-lg w-56 hover:bg-blue-800"
+        >
+          Enviar
+        </button>
+      </form>
+      <div id="successMessage" class="hidden text-green-500">
+        Tu correo se ha enviado con éxito.
+      </div>
+      <div id="errorMessage" class="hidden text-red-500">
+        Vaya, parece que hay un error al enviar el correo.
+      </div>
     </section>
     <footer class="bg-second flex justify-center poppins">
       <p>Designed by Damian</p>
     </footer>
+    <script>
+      document.addEventListener("DOMContentLoaded", function () {
+        const sendButton = document.getElementById("sendButton");
+        const successMessage = document.getElementById("successMessage");
+        const errorMessage = document.getElementById("errorMessage");
+
+        sendButton.addEventListener("click", function () {
+          const name = document.getElementById("name").value;
+          const number = document.getElementById("number").value;
+          const about = document.getElementById("about").value;
+          const message = document.getElementById("message").value;
+
+          fetch("http://localhost:8080/sendMail", {
+            method: "POST",
+            headers: {
+              "Content-Type": "application/json",
+            },
+            body: JSON.stringify({
+              name: name,
+              number: number,
+              about: about,
+              message: message,
+            }),
+          }).then((response) => {
+            console.log(response);
+            let res = response.json();
+            if (res.status == 200) {
+              successMessage.style.display = "none";
+              errorMessage.style.display = "block";
+            } else {
+              errorMessage.style.display = "none";
+              successMessage.style.display = "block";
+            }
+          });
+        });
+      });
+    </script>
   </body>
 </html>
